# ClaudeXCodex

./: .gitattributes  .gitignore  CLAUDE.md  README.md  claude-codex-review-loop-ideas.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
agent-loop/: plugin.json
agent-loop/skills/agent-loop/: plan-from-goal.md  plan-from-review.md  round-memo.md
agent-loop/skills/references/: claude-progress-schema.md  (+3 more)
config/: defaults.toml
python/: README.md  pyproject.toml
python/agent_loop/: __init__.py  __main__.py  cli.py  codex_client.py  config.py  diff_capture.py  payload.py  phases.py  progress_parser.py  progress_view.py  prompt_render.py  prompt_sections.py  registry.py  result_parser.py  resume.py  round_plan.py  run_state.py  safety.py  scout.py  sdk_runner.py  shared_io.py  verification.py
python/agent_loop/commands/: __init__.py  inspect.py  lifecycle.py  phases_cmd.py  planning.py  review.py  status.py  worker_ops.py
python/tests/: conftest.py  test_cli_advance_phase.py  test_cli_base.py  test_cli_capture_baseline.py  test_cli_dispatch_continue.py  test_cli_finalize.py  test_cli_handlers.py  test_cli_mark_worker_done.py  test_cli_phase_review.py  test_cli_plan_init.py  test_cli_plan_round.py  test_cli_record_diff.py  test_cli_review_gate.py  test_cli_review_round.py  test_codex_client.py  test_diff_capture.py  test_init_run_plan_file.py  test_integration_smoke.py  test_integration_smoke_v2.py  test_payload.py  test_phase_commit.py  test_phase_injection.py  test_plan_init_phase_doc.py  test_plan_init_phases.py  test_plan_parse_phases.py  test_plan_round_quality_gate.py  test_progress_parser.py  test_prompt_render.py  test_result_parser.py  test_resume.py  test_run_state.py  test_run_state_phase.py  test_safety.py  test_scout.py  test_sdk_runner.py  test_shared_io.py  test_skill_docs.py  test_wrappers.py
skills/agent-loop/: SKILL.md  resume-run.md  round-memo.md  round-review.md  safety-rules.md  shared-knowledge.md
skills/plan/: SKILL.md
skills/references/: claude-prompt-template.md  claude-result-schema.md  review-payload-schema.md  shared-knowledge-schema.md
(+7 files in other folders)
