[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop"
version = "0.1.0"
description = "Codex-driven Claude review loop controller"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
agent-loop = "agent_loop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_loop*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
