[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop"
version = "0.1.0"
description = "Codex-driven Claude review loop controller"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

# No [project.scripts] entry-point on purpose: the plugin invokes the CLI as
# `python -m agent_loop` (or via the bundled `${CLAUDE_PLUGIN_ROOT}/python/agent_loop/__main__.py`)
# so a `pip install` never plants an `agent-loop` shell script on PATH.

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_loop*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
